--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 30px;
 }
 h1{
-  font-size: 90px;
+  font-size: 70px;
 }
 button{
   margin: 10px;
@@ -21,4 +21,12 @@ button:hover{
 button:active{
     transform: scale(.9);
   box-shadow: 3px 3px 3px red;
+}
+form{
+  font-size: 30px;
+}
+input{
+  margin: 15px;
+  padding: 10px;
+  font-size: 20px;
 }
